# RGD_FAE

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  arona.cpp  arona.h  arona.ui  config.json  deploy.bat  functionpage.cpp  functionpage.h  functionpage.ui  main.cpp
resources/: resources.qrc
resources/images/: .gitkeep
